# structures-and-algorithms

./: .gitignore
cpp-forward-neural-network/: CMakeLists.txt  README.md  cost.h  crossentropy-cost.h  forward-network.cpp  forward-network.h  functions.cpp  functions.h  main.cpp  quadratic-cost.h  test  test.cpp
cpp-forward-neural-network/cost_strategies/: CMakeLists.txt  cost.h  crossentropy-cost.cpp  crossentropy-cost.h  quadratic-cost.cpp  quadratic-cost.h
cpp-forward-neural-network/data/: test.txt  test5.txt
cpp-forward-neural-network/data_strategies/: CMakeLists.txt  read-data.h  read-mnist.cpp  read-mnist.h  read-text.cpp  read-text.h
kNN/bounded-extrinsic-pq/: CMakeLists.txt  bounded_extrinsic_pq.hpp  main.cpp
kNN/bounded-extrinsic-pq/tests/: CMakeLists.txt  test.cpp
kNN/kdtree/: kdtree.hpp  main.cpp
kNN/kdtree/tests/: CMakeLists.txt  test.cpp
kdtree/: CMakeLists.txt  kdtree.cpp  kdtree.hpp
kdtree/tests/: CMakeLists.txt  test.cpp
